--- a/components/CatBoost/Train_classifier/component.yaml
+++ b/components/CatBoost/Train_classifier/component.yaml
@@ -4,7 +4,7 @@ description: |-
 
       Args:
           training_data_path: Path for the training data in CSV format.
-          model_path: Output path for the trained model in binary CatBoostClassifier format.
+          model_path: Output path for the trained model in binary CatBoostModel format.
           starting_model_path: Path for the existing trained model to start from.
           label_column: Column containing the label data.
 
@@ -19,16 +19,16 @@ description: |-
 
           cat_features: A list of Categorical features (indices or names).
           text_features: A list of Text features (indices or names).
-          additional_training_options: A dictionary with additional options to pass to CatBoostRegressor
+          additional_training_options: A dictionary with additional options to pass to CatBoostClassifier
 
       Outputs:
-          model: Trained model in binary CatBoostClassifier format.
+          model: Trained model in binary CatBoostModel format.
 
       Annotations:
           author: Alexey Volkov <alexey.volkov@ark-kun.com>
 inputs:
 - {name: training_data, type: CSV}
-- {name: starting_model, type: CatBoostClassifierModel, optional: true}
+- {name: starting_model, type: CatBoostModel, optional: true}
 - {name: label_column, type: Integer, default: '0', optional: true}
 - {name: loss_function, type: String, default: Logloss, optional: true}
 - {name: num_iterations, type: Integer, default: '500', optional: true}
@@ -39,7 +39,7 @@ inputs:
 - {name: text_features, type: JsonArray, optional: true}
 - {name: additional_training_options, type: JsonObject, default: '{}', optional: true}
 outputs:
-- {name: model, type: CatBoostClassifierModel}
+- {name: model, type: CatBoostModel}
 implementation:
   container:
     image: python:3.7
@@ -79,7 +79,7 @@ implementation:
 
           Args:
               training_data_path: Path for the training data in CSV format.
-              model_path: Output path for the trained model in binary CatBoostClassifier format.
+              model_path: Output path for the trained model in binary CatBoostModel format.
               starting_model_path: Path for the existing trained model to start from.
               label_column: Column containing the label data.
 
@@ -94,10 +94,10 @@ implementation:
 
               cat_features: A list of Categorical features (indices or names).
               text_features: A list of Text features (indices or names).
-              additional_training_options: A dictionary with additional options to pass to CatBoostRegressor
+              additional_training_options: A dictionary with additional options to pass to CatBoostClassifier
 
           Outputs:
-              model: Trained model in binary CatBoostClassifier format.
+              model: Trained model in binary CatBoostModel format.
 
           Annotations:
               author: Alexey Volkov <alexey.volkov@ark-kun.com>
@@ -143,7 +143,7 @@ implementation:
 
       import json
       import argparse
-      _parser = argparse.ArgumentParser(prog='Catboost train classifier', description="Train a CatBoost classifier model.\n\n    Args:\n        training_data_path: Path for the training data in CSV format.\n        model_path: Output path for the trained model in binary CatBoostClassifier format.\n        starting_model_path: Path for the existing trained model to start from.\n        label_column: Column containing the label data.\n\n        loss_function: The metric to use in training and also selector of the machine learning\n            problem to solve. Default = 'Logloss'\n        num_iterations: Number of trees to add to the ensemble.\n        learning_rate: Step size shrinkage used in update to prevents overfitting.\n            Default value is selected automatically for binary classification with other parameters set to default.\n            In all other cases default is 0.03.\n        depth: Depth of a tree. All trees are the same depth. Default = 6\n        random_seed: Random number seed. Default = 0\n\n        cat_features: A list of Categorical features (indices or names).\n        text_features: A list of Text features (indices or names).\n        additional_training_options: A dictionary with additional options to pass to CatBoostRegressor\n\n    Outputs:\n        model: Trained model in binary CatBoostClassifier format.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>")
+      _parser = argparse.ArgumentParser(prog='Catboost train classifier', description="Train a CatBoost classifier model.\n\n    Args:\n        training_data_path: Path for the training data in CSV format.\n        model_path: Output path for the trained model in binary CatBoostModel format.\n        starting_model_path: Path for the existing trained model to start from.\n        label_column: Column containing the label data.\n\n        loss_function: The metric to use in training and also selector of the machine learning\n            problem to solve. Default = 'Logloss'\n        num_iterations: Number of trees to add to the ensemble.\n        learning_rate: Step size shrinkage used in update to prevents overfitting.\n            Default value is selected automatically for binary classification with other parameters set to default.\n            In all other cases default is 0.03.\n        depth: Depth of a tree. All trees are the same depth. Default = 6\n        random_seed: Random number seed. Default = 0\n\n        cat_features: A list of Categorical features (indices or names).\n        text_features: A list of Text features (indices or names).\n        additional_training_options: A dictionary with additional options to pass to CatBoostClassifier\n\n    Outputs:\n        model: Trained model in binary CatBoostModel format.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>")
       _parser.add_argument("--training-data", dest="training_data_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--starting-model", dest="starting_model_path", type=str, required=False, default=argparse.SUPPRESS)
       _parser.add_argument("--label-column", dest="label_column", type=int, required=False, default=argparse.SUPPRESS)
