--- a/manifests/kustomize/base/cache-deployer/cache-deployer-role.yaml
+++ b/manifests/kustomize/base/cache-deployer/cache-deployer-role.yaml
@@ -13,3 +13,25 @@ rules:
   - create
   - get
   - patch
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests/approval
+  verbs:
+  - update
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - signers
+  resourceNames:
+  - kubernetes.io/*
+  verbs:
+  - approve
