--- a/manifests/kustomize/base/cache-deployer/cluster-scoped/cache-deployer-clusterrole.yaml
+++ b/manifests/kustomize/base/cache-deployer/cluster-scoped/cache-deployer-clusterrole.yaml
@@ -15,6 +15,8 @@ rules:
   - delete
   - get
   - update
+  - list
+  - watch
 - apiGroups:
   - admissionregistration.k8s.io
   resources:
@@ -22,3 +24,11 @@ rules:
   verbs:
   - create
   - get
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - signers
+  resourceNames:
+  - kubernetes.io/*
+  verbs:
+  - approve  
